samples/_failures_safe/1761611211_b47363_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26443be4.c: In function ‘main’:
./samples/SAFE/__tmp_26443be4.c:149:5: error: expected expression at end of input
  149 |     size_t decompressed_len = decompress_rle(compressed_buf.data, compressed_buf.size,
      |     ^~~~~~
./samples/SAFE/__tmp_26443be4.c:149:31: error: too few arguments to function ‘decompress_rle’
  149 |     size_t decompressed_len = decompress_rle(compressed_buf.data, compressed_buf.size,
      |                               ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_26443be4.c:77:8: note: declared here
   77 | size_t decompress_rle(const unsigned char *input, size_t input_len, unsigned char *output, size_t output_capacity) {
      |        ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_26443be4.c:149:5: error: expected declaration or statement at end of input
  149 |     size_t decompressed_len = decompress_rle(compressed_buf.data, compressed_buf.size,
      |     ^~~~~~
